# aco_model

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  USAGE.md  config-1.yaml  config.yaml  install.sh  pyproject.toml
data/: installs.txt
event_spec/: event_spec.md
notebooks/: 01_retention.ipynb  02_monetization.ipynb  03_economy.ipynb
output/: economy_sim.csv  retention_sim.csv  revenue_estimate.csv  state.json
src/aco_model/: __init__.py  cli.py  config.py  economy.py  engine.py  models.py  monetization.py  retention.py  state.py
tests/: test_config.py  test_economy.py  test_monetization.py  test_notebooks.py  test_retention.py  test_state.py
